2016-09-23  Kirit Saelensminde  <kirit@felspar.com>
 * Improved error output where a view name is misconfigured.
 * Removed the old `router` function as it's been replaced by `view::execute`.

2016-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Add a middleware that logs the HTTP request details and some response details.

2016-09-04  Kirit Saelensminde  <kirit@felspar.com>
 `fost.view.pathprefix` can now take an embedded configuration.

2016-07-30  Kirit Saelensminde  <kirit@felspar.com>
 `fost.response.401` can now be given an inner view for the response data.

2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 Add middleware that can alter the request by adding headers to it.

2016-07-27  Kirit Saelensminde  <kirit@felspar.com>
 Add `execute` method to the view to make forwarding to embedded views easier.

2016-07-26  Kirit Saelensminde  <kirit@felspar.com>
 Add a basic 401 response.

2016-07-15  Kirit Saelensminde  <kirit@felspar.com>
 * Improve some diagnostic output whilst loading.
 * Include configuration files for various logging levels.

2016-06-11  Kirit Saelensminde  <kirit@felspar.com>
 Show type information for caught `std::exception` instances.

2016-05-29  Kirit Saelensminde  <kirit@felspar.com>
 Improve error display and add logging of errors.

2016-02-28  Kirit Saelensminde  <kirit@felspar.com>
 Allow multiple configuration files to be loaded by the web server and explicitly load up the logging options.

2016-02-10  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Added Date, Expires to static response headers.

2016-02-08  Yothin Muangsommuk  <yothin@proteus-tech.com>
 Implemented 304 response.

2015-11-20  Kirit Saelensminde  <kirit@felspar.com>
 Removed use of deprecated Fost APIs.

2015-09-07  Kirit Saelensminde  <kirit@felspar.com>
 Add the ability for the static view to handle DELETE requests when it's configuration includes `"verbs": {"DELETE": true}`

2015-05-10  Kirit Saelensminde  <kirit@felspar.com>
 Remove uses of auto_ptr.
