@@ -97,13 +97,18 @@ std::pair<boost::shared_ptr<fostlib::mime>, int > fostlib::urlhandler::view::exe
     fostlib::http::server::request &request,
     const fostlib::host &host
 ) {
-    if ( configuration.isobject() ) {
-        auto view_fn = find_view(view_name(configuration), configuration["configuration"]);
-        return view_for(view_fn.first)(view_fn.second, path, request, host);
-    } else {
-        auto view_name = coerce<string>(configuration);
-        auto to_exec = find_view(view_name);
-        return view_for(to_exec.first)(to_exec.second, path, request, host);
+    try {
+        if ( configuration.isobject() ) {
+            auto view_fn = find_view(view_name(configuration), configuration["configuration"]);
+            return view_for(view_fn.first)(view_fn.second, path, request, host);
+        } else {
+            auto view_name = coerce<string>(configuration);
+            auto to_exec = find_view(view_name);
+            return view_for(to_exec.first)(to_exec.second, path, request, host);
+        }
+    } catch ( fostlib::exceptions::exception &e ) {
+        push_back(e.data(), "fost-web", "execute", "stacktrace", configuration);
+        throw;
     }
 }
 
